--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@aws-amplify/ui-react": "^6.5.5",
-    "aws-amplify": "^6.6.6",
+    "@aws-amplify/ui-react": "^6.9.1",
+    "@aws-amplify/ui-react-ai": "^1.3.0",
+    "aws-amplify": "^6.13.1",
     "next": "14.2.10",
     "react": "^18",
     "react-dom": "^18"
